assignments/PA4/tests/bad/bad17.cl
class M {
    x():Int{2};
};
class Main inherits M {
    main():Int{1};
};
